<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:backgroundTint="#D5A3CFE3"
        app:cardCornerRadius="10dp"
        app:cardElevation="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/pink_border"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/taskTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="200"
                android:fontFamily="monospace"
                android:text="@string/note_title"
                android:textColor="@color/blue"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taskDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:maxHeight="170dp"
                android:text="@string/description"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taskPrority"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:maxHeight="170dp"
                android:text="@string/priority"
                android:textColor="@color/blue"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/taskDeadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="monospace"
                android:maxHeight="170dp"
                android:text="@string/deadline"
                android:textColor="@color/blue"
                android:textSize="14sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>