<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="@color/blue"
            android:fontFamily="monospace"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/add_note"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/addNoteHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:hint="@string/enter_the_title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/addNoteTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/enter_the_description"
            android:padding="12dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNotePriority"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/addNoteDesc"
            android:layout_marginTop="15dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/enter_the_priority"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/addNoteDeadline"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/addNoteDesc"
            android:layout_marginTop="89dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/enter_the_deadline"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="383dp"
            android:layout_height="351dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="356dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.5"
            app:srcCompat="@drawable/task3" />

    </RelativeLayout>
</layout>