<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="12dp"
        tools:context=".UpdateNoteFragment">

        <TextView
            android:id="@+id/editNoteHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:background="@color/blue"
            android:fontFamily="monospace"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="@string/edit_task"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editNoteHeading"
            android:layout_marginTop="16dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:hint="Enter the title"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNoteDesc"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/editNoteTitle"
            android:layout_marginTop="12dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/enter_the_description"
            android:padding="12dp"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editNotePriority"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@+id/editNoteDesc"
            android:layout_marginTop="15dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/enter_the_priority"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editNoteDeadline"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignBottom="@+id/editNotePriority"
            android:layout_marginTop="89dp"
            android:layout_marginBottom="-76dp"
            android:background="@drawable/pink_border"
            android:fontFamily="monospace"
            android:gravity="top"
            android:hint="@string/enter_the_deadline"
            android:padding="12dp"
            android:textSize="20sp"
            android:textStyle="bold" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/editNoteFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:clickable="true"
            android:backgroundTint="@color/blue"
            android:tintMode="@color/white"
            android:src="@drawable/checked_checkbox"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="editFab" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="311dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="396dp"
            android:layout_marginEnd="23dp"
            android:layout_marginBottom="12dp"
            android:alpha="0.5"
            app:srcCompat="@drawable/task1" />

    </RelativeLayout>
</layout>